<resources>
    <string name="app_name">Pinned Places</string>
    <string name="placeholder_name">Aku cinta bunga</string>
    <string name="placeholder_second">Secondary Text</string>
    <string name="nama_dicoding">Raihan Achmad</string>
    <string name="email_dicoding">17radf@gmail.com</string>
    <string name="bio_dicoding">I created this app for 2 reasons. First, for an Android beginner submission. And second, it is a place where I\'ve been through.</string>
    <string name="share_button">Share Button</string>
    <string name="placeholder_support">Placeholder Support</string>
    <string name="placeholder_detail">Placeholder Detail</string>
    <string-array name="location_image_list">
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Slamet_Riyadi_Statue_in_Surakarta.jpg/432px-Slamet_Riyadi_Statue_in_Surakarta.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Yogyakarta_Indonesia_Tugu-Yogyakarta-02.jpg/402px-Yogyakarta_Indonesia_Tugu-Yogyakarta-02.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Danau_Belerang_Ijen.jpg/420px-Danau_Belerang_Ijen.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Wonderfull_Nusa_Penida.jpg/330px-Wonderfull_Nusa_Penida.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Gigi_hiu_%281%29.jpg/231px-Gigi_hiu_%281%29.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Deras-TreeHouse.JPG/242px-Deras-TreeHouse.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Dolphin_show_-_ancol_%28jakarta%2C_indonesia_1995%29_%283%29.jpg/330px-Dolphin_show_-_ancol_%28jakarta%2C_indonesia_1995%29_%283%29.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/COLLECTIE_TROPENMUSEUM_Straatgezicht_Bandoeng_TMnr_10014700.jpg/330px-COLLECTIE_TROPENMUSEUM_Straatgezicht_Bandoeng_TMnr_10014700.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Surabaya_City_Hall_by_Yamin_Nathaniel.jpg/450px-Surabaya_City_Hall_by_Yamin_Nathaniel.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Stasiun_Kediri.jpg/432px-Stasiun_Kediri.jpg</item>
    </string-array>
    <string-array name="location_title_list">
        <item>Surakarta</item>
        <item>Yogyakarta</item>
        <item>Gunung Ijen</item>
        <item>Bali</item>
        <item>Lampung</item>
        <item>Bring In House</item>
        <item>Taman Impian Jaya Ancol</item>
        <item>Kota Bandung</item>
        <item>Kota Surabaya</item>
        <item>Kota Kediri</item>
    </string-array>
    <string-array name="location_second_list">
        <item>Salah satu kota di provinsi Jawa Tengah, Indonesia, dengan luas 44,04 km2</item>
        <item>Kota yang Kaya akan Budaya dan Sejarah.</item>
        <item>Pesona Api Biru dan Keindahan Alam.</item>
        <item>Is a province of Indonesia and the westernmost of the Lesser Sunda Islands</item>
        <item>Sebuah provinsi di bagian ujung selatan Pulau Sumatra, Indonesia</item>
        <item>Terletak di Yogyakarta, Bring In House Yogyakarta menawarkan WiFi gratis, dan Anda dapat menikmati taman, lounge bersama, serta teras.</item>
        <item>Sebuah taman hiburan di Jakarta Utara, Indonesia. Taman ini dioperasikan oleh PT Pembangunan Jaya Ancol Tbk</item>
        <item>Adalah ibu kota yang sekaligus menjadi pusat pemerintahan dan perekonomian dari provinsi Jawa Barat, Indonesia</item>
        <item>Adalah ibu kota Provinsi Jawa Timur yang menjadi pusat pemerintahan dan perekonomian dari Provinsi Jawa Timur sekaligus kota terbesar di provinsi tersebut</item>
        <item>Kota tertua yang ada di Jawa Timur. Kota Kediri memiliki luas wilayah 63,40 km² .</item>
    </string-array>
    <string-array name="location_support_list">
        <item>Kota ini merupakan kota terbesar ketiga di pulau Jawa bagian selatan setelah Kota Malang, Jawa Timur dan Kota Bandung, Jawa Barat menurut jumlah penduduk. Sisi Timur kota ini dilewati sungai yang terabadikan dalam salah satu lagu keroncong, Bengawan Solo. Kota ini termasuk dalam kawasan Solo Raya, sebagai kota utama. </item>
        <item>Jelajahi tradisi dan warisan budaya Yogyakarta yang mempesona.</item>
        <item>Salah satu fenomena alam yang paling terkenal dari Gunung Ijen adalah blue fire (api biru) di dalam kawah yang terletak di puncak gunung tersebut.</item>
        <item>Bali is the only Hindu-majority province in Indonesia, with 86.9% of the population adhering to Balinese Hinduism.</item>
        <item>Provinsi ini memiliki dua kota, yaitu Bandar Lampung dan Metro, serta 13 kabupaten</item>
        <item>This is where we (secret) met</item>
        <item>Kawasan Ancol sebelumnya merupakan kawasan perumahan mewah model villa yang dimiliki orang Belanda pada rentang waktu abad ke-18 hingga abad ke-19. Namun kawasan perumahan mewah tersebut terbengkalai pada akhir abad ke-19 karena cuaca yang tidak bersahabat dan sumber air yang menjadi asin karena letaknya di pinggir laut. Pada awal abad ke-20, lahan perumahan mewah yang terbengkalai tersebut diubah menjadi kawasan budidaya tiram hingga diubah menjadi rencana kawasan wisata terpadu pada tahun 1966.</item>
        <item>Kota Bandung juga merupakan kota terbesar keempat di Indonesia, setelah Jakarta, Surabaya, dan Medan. Bandung menjadi kota terpadat kedua di Indonesia setelah Jakarta dengan kepadatan mencapai 15.051 jiwa/km2. Terletak 141 km di sebelah tenggara Jakarta, 363 km di sebelah barat laut Semarang, 400 km di sebelah barat Yogyakarta, 675 km (via Semarang) &amp; 765 km (via Yogyakarta) di sebelah barat Surabaya. Bandung merupakan kota terbesar di bagian selatan pulau Jawa. Pada pertengahan tahun 2023, jumlah penduduk kota Bandung sebanyak 2.555.187 orang.</item>
        <item>Surabaya juga merupakan sebuah kota yang terletak di Provinsi Jawa Timur, Indonesia. Surabaya merupakan kota terbesar kedua di Indonesia setelah Kota Jakarta. Kota ini terletak 800 km sebelah timur Jakarta, atau 435 km sebelah barat laut Denpasar, Bali. Letak kota ini berada di pantai utara Pulau Jawa bagian timur yang berhadapan dengan Selat Madura serta Laut Jawa. </item>
        <item>Dan seluruh wilayahnya merupakan enklave dari Kabupaten Kediri. Kota Kediri terbelah oleh Sungai Brantas yang membujur dari Selatan ke Utara sepanjang 7 kilometer. Penduduk kota ini berjumlah 289.418 jiwa, berdasarkan data Badan Pusat Statistik Kota Kediri tahun 2023.</item>
    </string-array>
</resources>