<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/placeholder_name"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toStartOf="@id/image_loc"
            app:layout_constraintStart_toStartOf="@id/image_photo"
            app:layout_constraintTop_toBottomOf="@+id/image_photo" />

        <ImageView
            android:id="@id/image_loc"
            android:layout_width="20dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/title_name"
            app:layout_constraintTop_toTopOf="@id/title_name"
            app:layout_constraintBottom_toBottomOf="@id/title_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/location"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/title_name"
            app:layout_constraintEnd_toEndOf="@+id/image_loc"
            app:layout_constraintTop_toBottomOf="@id/title_name" />

        <TextView
            android:id="@+id/second_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/placeholder_second"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/support_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:justificationMode="inter_word"
            android:text="@string/placeholder_support"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/second_text"
            app:layout_constraintTop_toBottomOf="@+id/second_text" />

        <TextView
            android:id="@+id/detail_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:justificationMode="inter_word"
            android:text="@string/placeholder_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/support_text"
            app:layout_constraintTop_toBottomOf="@+id/support_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>