<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AboutActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            app:civ_border_color="#747474"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:maxWidth="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/nama_dicoding"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_marginTop="5dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/title_name"
            app:layout_constraintEnd_toEndOf="@id/title_name"
            app:layout_constraintTop_toBottomOf="@id/title_name"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/email_dicoding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:text="@string/bio_dicoding"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintEnd_toEndOf="@id/email"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
